--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,143 @@
 /* Journey to the Center of the Earth Practicum */
 /* Sarah Lopez */
+
+body {
+    background-color: #765729;
+    margin: 5px;
+    font-size: 16px;
+}
+
+/*All page sections Bg color, shadow*/
+
+nav, main, aside, footer{
+    background-color: #d0cbc5;
+    margin-bottom: 5px;;
+    box-shadow: 10px 10px 5px inset #696969;
+    border:1px solid #886644;
+}
+
+
+main, aside{
+    padding: 20px 20px;
+}
+
+/* Header */
+
+h1 {
+    color: #FFFFFF;
+    text-align: center;
+    background-image: url(../img/cave.jpg);
+    box-shadow: 20px 20px 20px inset #000000;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border:2px solid #886644;
+    background-size: 470px;
+    margin: 2px;
+    padding: 30px 15px 30px 15px;
+    font-family: Georgia, Times, serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-shadow: 5px 5px black;
+}
+
+
+
+/* Nav */
+
+nav {
+    font-size: 15px;
+    text-align: center;
+    margin: 2px;
+    padding: 10px;
+}
+
+nav ul{
+    padding:0;
+}
+
+nav ul li{
+    display: inline;
+    padding: 0px 15px;
+}
+
+nav ul li:nth-child(odd) {
+    border-right: 5px double black;
+}
+
+nav ul li:nth-child(2) {
+    border-right: 5px double black;
+}
+
+/*Links in Nav*/
+
+a:link {
+    color: #000000
+}
+
+
+
+/*Main*/
+
+h2 {
+    border-bottom: dashed 1px;
+
+}
+
+main p:first-of-type::first-line {
+    font-size: 19px;
+}
+
+.character {
+    font-weight:bold;
+}
+
+#cover {
+max-width: 200px;
+float: left;
+margin: 10px 20px 20px 10px;
+}
+
+
+
+
+/* Cryptogram */
+
+#cryptogram img {
+max-width: 225px;
+align-self: auto;
+}
+
+#cryptogram{
+    text-align: center;
+    font-style: italic;
+}
+
+
+
+/* Book Reviews */
+
+.submission{
+    background-color: #dbdbda;
+    border: 2px solid;
+    padding:10px;
+    margin: 10px;
+    font-size: 16px;
+}
+.opinion{
+    text-align:center;
+}
+
+.signature{
+    text-align: right;
+    font-style:italic;
+}
+
+/* Footer */
+
+footer{
+    text-align: center;
+    padding: 20px 20px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border:2px solid #886644;
+}
