--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,25 @@
 /* Journey to the Center of the Earth Practicum */
 /* Sarah Lopez */
 
+*{
+    box-sizing: border-box;
+}
+
 body {
     background-image: linear-gradient(#765729, black);
-    margin: 5px;
     font-size: 16px;
+    justify-content: center;
+    align-content: center;
 }
 
 /*All page sections Bg color, shadow*/
 
+header, nav, main, aside, footer{
+    margin-bottom: 5px;
+}
+
 nav, main, aside, footer{
     background-color: rgba(255, 255, 255, 0.75);
-    margin-bottom: 5px;;
     box-shadow: 10px 10px 5px inset #696969;
     border:1px solid #886644;
 }
@@ -25,18 +33,20 @@ main, aside{
 
 /* Header */
 
-h1 {
-    color: #FFFFFF;
-    text-align: center;
+header {
     background-image: url(../img/cave.jpg);
     background-position: center;
-    box-shadow: 20px 20px 20px inset #000000;
+    box-shadow: 30px 30px 20px inset #000000;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     border:2px solid #886644;
     background-size: 800px;
-    margin: 2px;
-    padding: 30px 15px 30px 15px;
+    padding: 20px 15px 20px 15px;
+}
+
+h1 {
+    color: #FFFFFF;
+    text-align: center;
     font-family: Georgia, Times, serif;
     font-size: 30px;
     font-weight: bold;
@@ -50,12 +60,11 @@ h1 {
 nav {
     font-size: 15px;
     text-align: center;
-    margin: 2px;
-    padding: 10px;
+    padding: 5px 15px;
 }
 
 nav ul{
-    padding:0;
+    padding:0px;
 }
 
 nav ul li{
@@ -112,9 +121,9 @@ margin: 10px 20px 20px 10px;
 
 /* Cryptogram */
 
-#cryptogram img {
-max-width: 225px;
-align-self: auto;
+#cryptogram img{
+width: 200px;
+margin: auto;
 }
 
 #cryptogram{
@@ -146,36 +155,92 @@ align-self: auto;
 
 footer{
     text-align: center;
-    padding: 20px 20px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     border:2px solid #886644;
+}
+
+footer p:first-child{
+    padding-top: 20px;
 }
 
 
 /*tablet size */
 
 @media screen and (min-width: 785px){
-    h1, body, nav, main, aside, footer{
-        margin-bottom:8px;
+    nav{
+        font-size: 17px;
     }
-    aside {
+
+    header{
+        background-size:1300px;
+    }
+
+    aside{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
+
     aside h2{
-        grid-column: span 3;
+        grid-column: span 4;
     }
+
+    .signature{
+        text-align: center;
+    }
+
     h1{
         font-size: 50px;
-        background-size: 1000px;
-        box-shadow: 30px 30px 30px inset #000000;
-        padding-top: 40px;
-        padding-bottom: 40px;
     }
+
     #cryptogram img{
-        max-width: 500px;
-
+       width: 500px;
     }
 
+}
+
+
+/*Desktop size */
+
+@media screen and (min-width: 1024px){
+    body{
+        margin-left: auto;
+        margin-right: auto;
+        min-width: 1024px;
+        max-width: 1200px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 10px;
+        padding:0 5px;
+    }
+
+
+    header, nav, footer{
+        grid-column: span 3;
+        min-width: 1024px;
+        max-width: 1200px;
+    }
+
+
+    main{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        
+    }
+
+    aside{
+        grid-column-start: 3;
+        grid-column-end: 4;
+    }
+
+
+    aside{
+        display:block;
+    }
+
+    header, nav, main, aside, footer{
+        margin-bottom: 10px;
+        /* margin-left: 5px;
+        margin-right: 5px; */
+    }
 }
